Update L5 docs
